# frag.jetzt-langchain

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.kaniko  LICENSE  README.md  build-local.sh  eval_rag_and_moderation.ipynb  pyproject.toml  run-docker.sh  run-local.sh
app/: cache.py  server.py
app/ai_conversation/: ai_conversation.py  db.py  db_decorator.py  utils.py
app/ai_conversation/api/: models.py  router.py  service.py
app/ai_conversation/assistants/: models.py  router.py  service.py
app/ai_conversation/db_files/: 1_create_schema.sql
app/ai_conversation/db_statements/: create_content.sql  create_file.sql  ensure_migration.sql  find_role.sql  get_unoptimized_content.sql  get_unreferenced_content.sql
app/ai_conversation/entities/: account.py  room.py  room_access.py  thread.py  uploaded_file_content.py
app/ai_conversation/file_handling/: file_upload.py  file_upload_processor.py  router.py  vectorstore.py
app/ai_conversation/restrictions/: models.py  router.py  service.py
app/ai_conversation/room_settings/: models.py  router.py  service.py
app/ai_conversation/services/: role_checker.py
app/ai_conversation/threads/: chat_namer.py  graph.py  router.py  service.py
app/routes/: category_list.py  category_select.py  embed.py  improve.py  keywords.py  moderate.py  topic.py  utils.py
app/security/: oauth2.py
eval/: badWords.txt  eval_categories.ipynb  llmlingua.json  normal-category.json  test.csv  test_dataset.pkl
train/: label.py  streamlit-data.json  train.ipynb
train/multihatespeech/: french-celadon-mhd.json  french-detox-mhd.json
