[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ruben Bimberg <ruben.bimberg@gmx.de>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "=3.11.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pyjwt = "^2.9.0"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-anthropic = "^0.2.3"
langchain-mistralai = "^0.2.0"
langchain-fireworks = "^0.2.1"
langchain-together = "^0.2.0"
langchain-google-genai = "^2.0.1"
langchain-groq = "^0.2.0"
langchain-cohere = "^0.3.1"
langchain-aws = "^0.2.4"
langchain-huggingface = "^0.1.0"
langchain-nvidia-ai-endpoints = "^0.3.3"
langchain-ai21 = "^0.1.9"
langchain-upstage = "^0.3.0"
langchain-community = "^0.3.3"
langchain-ibm = "^0.3.2"
snowflake-snowpark-python = "^1.24.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
